--- a/index.html
+++ b/index.html
@@ -128,23 +128,32 @@
           <h2 class="our-work-title">Чем мы занимаемся</h2>
           <ul class="our-work-list list">
             <li class="our-work-item">
-              <img
-                src="./images/adaptive-programming.jpg"
-                alt="адаптивное програмирование"
-                width="370"
-                height="294"
-              />
+              <div class="our-work-thumb">
+                <img
+                  src="./images/adaptive-programming.jpg"
+                  alt="десктопные приложения"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="our-work-sub-title">Десктопные приложения</h3>
+              </div>
             </li>
             <li class="our-work-item">
-              <img
-                src="./images/mobile-application-development.jpg"
-                alt="создание мобильной версии"
-                width="370"
-                height="294"
-              />
+              <div class="our-work-thumb">
+                <img
+                  src="./images/mobile-application-development.jpg"
+                  alt="создание мобильной версии"
+                  width="370"
+                  height="294"
+                />
+                <h3 class="our-work-sub-title">Мобильные приложения</h3>
+              </div>
             </li>
             <li class="our-work-item">
-              <img src="./images/design.jpg" alt="оформление" width="370" height="294" />
+              <div class="our-work-thumb">
+                <img src="./images/design.jpg" alt="оформление" width="370" height="294" />
+                <h3 class="our-work-sub-title">Дизайнерские решения</h3>
+              </div>
             </li>
           </ul>
         </div>
