--- a/portfolio.html
+++ b/portfolio.html
@@ -77,12 +77,21 @@
           <ul class="portfolio-list list">
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/website-tekhnokryak.jpg"
-                  alt="главная страница сайта технокряк"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/website-tekhnokryak.jpg"
+                    alt="главная страница сайта технокряк"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -91,12 +100,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/poster-orlean-vs-golden.jpg"
-                  alt="постер игры New Orlean vs Golden Star"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/poster-orlean-vs-golden.jpg"
+                    alt="постер игры New Orlean vs Golden Star"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -107,12 +125,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/logo-restaurant.jpg"
-                  alt="логотип ресторана Seafood"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/logo-restaurant.jpg"
+                    alt="логотип ресторана Seafood"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-text">Приложение</p>
@@ -121,12 +148,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/logo-prime.jpg"
-                  alt="логотип проекта Prime"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/logo-prime.jpg"
+                    alt="логотип проекта Prime"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Проект <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -135,12 +171,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/project-boxes.jpg"
-                  alt="логотип проекта Boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/project-boxes.jpg"
+                    alt="логотип проекта Boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Приложение</p>
@@ -149,12 +194,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/website-inspiration.jpg"
-                  alt="главная страница сайта Inspiration has no Borders"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/website-inspiration.jpg"
+                    alt="главная страница сайта Inspiration has no Borders"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -163,12 +217,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/design-limited-edition.jpg"
-                  alt="страницы журнала издания Limited Edition"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/design-limited-edition.jpg"
+                    alt="страницы журнала издания Limited Edition"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -177,12 +240,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/project-lab.jpg"
-                  alt="логотип проекта LAB"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/project-lab.jpg"
+                    alt="логотип проекта LAB"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -191,12 +263,21 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="portfolio-link link">
-                <img
-                  src="./images/growing-business.jpg"
-                  alt="постер додатка Growing Business"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    src="./images/growing-business.jpg"
+                    alt="постер додатка Growing Business"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-sub-text">
+                      Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                      сервисов. Все это позволит посетителю получить исчерпывающие сведения о
+                      компании или частном лице.
+                    </p>
+                  </div>
+                </div>
                 <div class="poster">
                   <h2 class="portfolio-title" lang="en">Growing Business</h2>
                   <p class="portfolio-text">Приложение</p>
